1576551061 | 43 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/fallback.js,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboard/localization/vrmonitor_english.json,  M resources/webinterface/dashboard/localization/vrmonitor_german.json,  M resources/webinterface/dashboard/localization/vrmonitor_italian.json,  M resources/webinterface/dashboard/localization/vrmonitor_korean.json,  M resources/webinterface/dashboard/localization/vrmoni
https://steamdb.info/patchnotes/4500691/

--- a/resources/webinterface/dashboard/localization/vrmonitor_english.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_english.json
@@ -107,11 +107,12 @@
 	"Settings_Advanced_Paths_Header": "Paths",
 	"Settings_Advanced_Reset_Header": "Reset",
 	"Settings_Advanced_Status_Header": "Status Check",
-	"Settings_ShowSettingsInDashboard": "Settings (VR Dashboard)",
+	"Settings_ShowSettingsInDashboard": "Access Settings In-Headset",
 	"Settings_CheckForSteam": "Check for Steam",
 	"Settings_DebugInputBindings": "Enable debugging options in the input binding user interface",
 	"Settings_FadeToGrid": "Fade To Grid on app hang",
-	"Settings_EnableDashboard": "VR Dashboard",
+	"Settings_EnableDashboard": "VR Dashboard on System Button",
+	"Settings_EnableDashboardDesc": "Allow the VR Dashboard to be summoned in response to a system button press.",
 	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "Enjoy virtual environments, social features, and more.",
 	"Settings_LargeSpace": "Large Space",
