--- a/resources/webinterface/dashboard/localization/vrmonitor_german.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_german.json
@@ -168,9 +168,9 @@
 	"Settings_Perapplication_RefreshRateOverride_Description": "Bei Auswahl dieser Aktion kann eine benutzerdefinierte Aktualisierungsrate festgelegt werden.",
 	"Settings_MimeTypes_Pancake_Header": "Wählen Sie eine Anwendung zum Ausführen von 2D-Anwendungen",
 	"Settings_Camera_EnableCamera": "Kamera aktivieren",
-	"Settings_Camera_AllowCameraInDashboard": "Show Camera on Controller",
+	"Settings_Camera_AllowCameraInDashboard": "Kamera auf Controller anzeigen",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "Aktiviert ein mit dem Controller verbundenes Kamerafenster, wenn das Dashboard aktiviert ist.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Room Edge",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Kamera auf Raumbegrenzung anzeigen",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
 	"Settings_Camera_AllowCameraForRoomView": "Raumansicht aktivieren",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Greifen Sie jederzeit auf die Raumansicht zu, indem Sie die Systemtaste doppelt drücken.",
@@ -216,7 +216,7 @@
 	"Settings_Classic": "Klassisch",
 	"Settings_Near": "Nah (beta)",
 	"Settings_DesktopScale": "Desktop-Skalierung",
-	"Settings_DashboardScale": "Dashboard Scale",
+	"Settings_DashboardScale": "Dashboard-Skalierung",
 	"SettingsTime_5s": "5 Sekunden",
 	"SettingsTime_30s": "30 Sekunden",
 	"SettingsTime_1m": "1 Minute",
@@ -277,7 +277,7 @@
 	"Settings_PerApplication_VideoSettings": "Videoeinstellungen pro Anwendung",
 	"Settings_ChooseStartupOverlayApps": "Overlay-Anwendungen beim Starten auswählen",
 	"Settings_StartTheseOverlayAppsOnLaunch": "Diese Overlay-Anwendungen bei Ausführung starten:",
-	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "No Overlay Apps were found",
+	"Settings_ChooseStartupOverlayApps_NoOverlayAppsInstalled": "Keine Overlay-Anwendungen gefunden",
 	"Settings_ActiveController": "Aktiver Controller",
 	"Settings_EditBinding": "Diese Zuordnung bearbeiten",
 	"Settings_EditBinding_ChooseAnother": "Andere Zuordnung auswählen",
@@ -289,6 +289,6 @@
 	"Settings_ShowThumbstickSettings": "Analogstickeinstellungen bearbeiten",
 	"Settings_ThumbstickSettings": "Analogstickeinstellungen",
 	"Settings_Number_Selected": "%1$s ausgewählt",
-	"TestControllerTitle": "Testing Controller %1$s",
-	"TestController_NoController": "Turn on a controller to test it."
+	"TestControllerTitle": "Controller %1$s wird getestet …",
+	"TestController_NoController": "Schalten Sie einen Controller an, um ihn zu testen."
 }
