--- a/resources/webinterface/dashboard/localization/webhelper_italian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_italian.json
@@ -48,8 +48,8 @@
 	"/user/hand/primary": "Mano principale",
 	"/user/hand/secondary": "Altra mano",
 	"/user/hand/any": "Qualsiasi mano",
-	"/user/stylus": "Stylus",
-	"/user/gamepad": "Gamepad",
+	"/user/stylus": "Penna",
+	"/user/gamepad": "Controller",
 	"/user/foot/left": "Piede sinistro",
 	"/user/foot/right": "Piede destro",
 	"/user/shoulder/left": "Spalla sinistra",
