--- a/resources/webinterface/dashboard/localization/webhelper_korean.json
+++ b/resources/webinterface/dashboard/localization/webhelper_korean.json
@@ -48,8 +48,8 @@
 	"/user/hand/primary": "주로 사용하는 손",
 	"/user/hand/secondary": "다른 손",
 	"/user/hand/any": "오른손 또는 왼손",
-	"/user/stylus": "Stylus",
-	"/user/gamepad": "Gamepad",
+	"/user/stylus": "스타일러스",
+	"/user/gamepad": "게임패드",
 	"/user/foot/left": "왼발",
 	"/user/foot/right": "오른발",
 	"/user/shoulder/left": "왼쪽 어깨",
