--- a/resources/webinterface/dashboard/localization/webhelper_latam.json
+++ b/resources/webinterface/dashboard/localization/webhelper_latam.json
@@ -48,8 +48,8 @@
 	"/user/hand/primary": "Mano principal",
 	"/user/hand/secondary": "Otra mano",
 	"/user/hand/any": "Cualquier mano",
-	"/user/stylus": "Stylus",
-	"/user/gamepad": "Gamepad",
+	"/user/stylus": "Puntero",
+	"/user/gamepad": "Control",
 	"/user/foot/left": "Pie izquierdo",
 	"/user/foot/right": "Pie derecho",
 	"/user/shoulder/left": "Hombro izquierdo",
